# TravelPlanner

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260520_0001_init.py
app/: main.py
app/api/: middleware.py
app/api/v1/: __init__.py  dependencies.py
app/api/v1/routers/: health.py  places.py  projects.py
app/core/: config.py  constants.py  exceptions.py  logging.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  place.py  project.py
app/integrations/: artic_client.py
app/repositories/: base.py  place.py  project.py
app/schemas/: common.py  place.py  project.py
app/services/: artic_service.py  place_service.py  project_service.py
app/utils/: cache.py
postman/: TravelPlanner.postman_collection.json
tests/: conftest.py
tests/integration/: test_health.py  test_places_api.py  test_projects_api.py
tests/unit/: test_artic_client.py  test_place_service.py  test_project_service.py
